// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > renders correctly horizontally 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <hr
      aria-orientation="horizontal"
      class="styles__bu43fba styles_direction_horizontal__bu43fbb styles_sentiment_neutral__bu43fbd"
      role="separator"
      style="height: 1px;"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator > renders correctly vertically 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <hr
      aria-orientation="vertical"
      class="styles__bu43fba styles_direction_vertical__bu43fbc styles_sentiment_neutral__bu43fbd"
      role="separator"
      style="width: 1px;"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator > renders correctly with custom icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-0 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-orientation="horizontal"
      class="styles__bu43fb0 styles_direction_horizontal__bu43fb1 styles_sentiment_neutral__bu43fb3"
      role="separator"
    >
      <hr
        class="styles__bu43fba styles_direction_horizontal__bu43fbb styles_hasIcon_true__bu43fbk styles_sentiment_neutral__bu43fbd"
        style="height: 1px;"
      />
      <svg
        class="emotion-0 emotion-1"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M8.25 2a.75.75 0 0 1 .75.75v8.69l1.22-1.22a.75.75 0 1 1 1.06 1.06l-2.5 2.5a.75.75 0 0 1-1.06 0l-2.5-2.5a.75.75 0 1 1 1.06-1.06l1.22 1.22V2.75A.75.75 0 0 1 8.25 2"
          fill-rule="evenodd"
        />
        <path
          d="M10.25 4a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
        />
      </svg>
      <hr
        class="styles__bu43fba styles_direction_horizontal__bu43fbb styles_hasIcon_true__bu43fbk styles_sentiment_neutral__bu43fbd"
        style="height: 1px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Separator > renders correctly with custom icon horizontally 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-0 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-orientation="horizontal"
      class="styles__bu43fb0 styles_direction_horizontal__bu43fb1 styles_sentiment_neutral__bu43fb3"
      role="separator"
    >
      <hr
        class="styles__bu43fba styles_direction_horizontal__bu43fbb styles_hasIcon_true__bu43fbk styles_sentiment_neutral__bu43fbd"
        style="height: 1px;"
      />
      <svg
        class="emotion-0 emotion-1"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M8.25 2a.75.75 0 0 1 .75.75v8.69l1.22-1.22a.75.75 0 1 1 1.06 1.06l-2.5 2.5a.75.75 0 0 1-1.06 0l-2.5-2.5a.75.75 0 1 1 1.06-1.06l1.22 1.22V2.75A.75.75 0 0 1 8.25 2"
          fill-rule="evenodd"
        />
        <path
          d="M10.25 4a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
        />
      </svg>
      <hr
        class="styles__bu43fba styles_direction_horizontal__bu43fbb styles_hasIcon_true__bu43fbk styles_sentiment_neutral__bu43fbd"
        style="height: 1px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Separator > renders correctly with custom icon vertically 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-0 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-orientation="vertical"
      class="styles__bu43fb0 styles_direction_vertical__bu43fb2 styles_sentiment_neutral__bu43fb3"
      role="separator"
    >
      <hr
        class="styles__bu43fba styles_direction_vertical__bu43fbc styles_hasIcon_true__bu43fbk styles_sentiment_neutral__bu43fbd"
        style="width: 1px;"
      />
      <svg
        class="emotion-0 emotion-1"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M8.25 2a.75.75 0 0 1 .75.75v8.69l1.22-1.22a.75.75 0 1 1 1.06 1.06l-2.5 2.5a.75.75 0 0 1-1.06 0l-2.5-2.5a.75.75 0 1 1 1.06-1.06l1.22 1.22V2.75A.75.75 0 0 1 8.25 2"
          fill-rule="evenodd"
        />
        <path
          d="M10.25 4a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
        />
      </svg>
      <hr
        class="styles__bu43fba styles_direction_vertical__bu43fbc styles_hasIcon_true__bu43fbk styles_sentiment_neutral__bu43fbd"
        style="width: 1px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Separator > renders correctly with custom sentiment 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <hr
      aria-orientation="horizontal"
      class="styles__bu43fba styles_direction_horizontal__bu43fbb styles_sentiment_primary__bu43fbe"
      role="separator"
      style="height: 1px;"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator > renders correctly with custom sentiment and icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-0 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      aria-orientation="horizontal"
      class="styles__bu43fb0 styles_direction_horizontal__bu43fb1 styles_sentiment_primary__bu43fb4"
      role="separator"
    >
      <hr
        class="styles__bu43fba styles_direction_horizontal__bu43fbb styles_hasIcon_true__bu43fbk styles_sentiment_primary__bu43fbe"
        style="height: 1px;"
      />
      <svg
        class="emotion-0 emotion-1"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M8.25 2a.75.75 0 0 1 .75.75v8.69l1.22-1.22a.75.75 0 1 1 1.06 1.06l-2.5 2.5a.75.75 0 0 1-1.06 0l-2.5-2.5a.75.75 0 1 1 1.06-1.06l1.22 1.22V2.75A.75.75 0 0 1 8.25 2"
          fill-rule="evenodd"
        />
        <path
          d="M10.25 4a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
        />
      </svg>
      <hr
        class="styles__bu43fba styles_direction_horizontal__bu43fbb styles_hasIcon_true__bu43fbk styles_sentiment_primary__bu43fbe"
        style="height: 1px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Separator > renders correctly with custom thickness 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <hr
      aria-orientation="horizontal"
      class="styles__bu43fba styles_direction_horizontal__bu43fbb styles_sentiment_neutral__bu43fbd"
      role="separator"
      style="height: 3px;"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <hr
      aria-orientation="horizontal"
      class="styles__bu43fba styles_direction_horizontal__bu43fbb styles_sentiment_neutral__bu43fbd"
      role="separator"
      style="height: 1px;"
    />
  </div>
</DocumentFragment>
`;
